# poliastro

./: .binstar.yml  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .importlinter  .isort.cfg  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  Dockerfile  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  Makefile.fortran  README  README.fortran.txt  README.md  README.octave.txt  README.rst  README.txt  TODO.rst  TODO.txt  __init__.py  _octave.py  appveyor.yml  ast2body.pyf  astiod.pyf  azure-pipelines.yml  codemeta.json  (+16 more)
.ci/appveyor/: install-miniconda.ps1
.circleci/: config.yml
.github/: FUNDING.yml  no-response.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  new_release.md
.github/workflows/: documentation-links.yaml  release.yml  validation_trigger.yml
binder/: environment.yml  postBuild  requirements.in  requirements.txt
binder/labconfig/: default_setting_overrides.json
buildscripts/condarecipe/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
contrib/: CR3BP.py  README.md  benchmark.py  extract_czml.py  relative.py  rv2tle.py  satgpio.py
contrib/CR3BP/: CR3BP.py  README.md  test_run_CR3BP.py
contrib/cr3bp_DhruvJ/: EM_L2_Halo_family_PALC.html  EM_L2_Vertical_family_PALC.html  EM_L3_Axial_family_PALC.html  EM_L3_Halo_family_PALC.html  EM_L4_Short_Period_to_L3_lyapunov_family.html  README.md  cr3bp_PO_master.py  cr3bp_PO_targeter.py  cr3bp_char_quant.py  cr3bp_fam_continuation.py  cr3bp_initial_guess_generator.py  cr3bp_lib_JC_calc.py  cr3bp_lib_calc.py  cr3bp_lyap_ig_generator.py  cr3bp_master.py  cr3bp_model_master.py  cr3bp_plot_orbits.py  cr3bp_po_fam_continuation.py  cr3bp_po_plot_orbits.py  example.py  example_3D_orb_fam.py  example_L1_halo_orb_fam .py  example_L1_halo_orb_fam.py  example_L2_halo_orb_fam .py  example_L2_halo_orb_fam.py  example_L2_vertical_orb_fam.py  example_L2_vertical_orb_fam_palc.py  example_L3_axial_orb_fam.py  example_L3_halo_orb_fam.py  example_L4_Axial_orb_fam.py  example_L4_short_period_fam.py  example_L4_vertical_orb_fam.py  example_L4_vertical_orb_fam_palc.py  example_lyapunov_orb_fam.py  example_vertical_orb_fam.py  example_vertical_orb_fam_palc.py  example_vertical_orb_fam_periodicity.py
docs/: Makefile
docs/source/: Makefile  about.md  about.rst  api.md  api.rst  background.md  bibliography.md  bibliography.rst  changelog.md  changelog.rst  conf.py  contributing.md  contributing.rst  core.rst  dastcom5 parameters.rst  development_ref.md  form.rst  gallery.md  gallery.rst  getting_started.md  getting_started.rst  history.md  index.md  index.rst  installation.md  jupyter.rst  overview.md  quickstart.md  quickstart_guide.md  references.rst  related.md  safe.rst  success.rst  user_guide.md  user_guide.rst
examples/: Comparing Hohmann and bielliptic transfers.ipynb  Exploring the New Horizons launch.ipynb  Going to Jupiter with Python using Jupyter and poliastro.ipynb  Going to Mars with Python using poliastro.ipynb  Integration example.ipynb  Propagation using Cowell's formulation.ipynb  Quickly solving Kepler's Problem in Python using numba.ipynb  Revisiting Lambert's problem in Python.ipynb  Solving Lambert's problem in Python.ipynb  Studying Hohmann transfers.ipynb  VEM - Problema 1.ipynb  hohmann_vs_bielliptic.py  index.ipynb
fortran/: astiod.for  astmath.cmn  astreduc.cmn  astreduc.for  asttime.for
octave/: angl.m  mag.m  newtonm.m  newtonnu.m  uplanet_2013.m
poliastro/: .codeclimate.yml  .gitignore  ISSUE_TEMPLATE.md  README.rst  __init__.py  angles.py  appveyor.yml  ast2body.pyf  astiod.pyf  bodies.py  cli.py  constants.py  ephem.py  examples.py  iod.py  jit.py  logging.py  maneuver.py  math.py  perturbation.py  plotting.py  pyproject.toml  requirements.txt  setup.py  stumpff.py  testing.py  twobody.py  util.py
poliastro/fortran/: ast2body.for  astconst.cmn  astmath.for
poliastro/octave/: constmath.m  rv2coe.m
poliastro/src/: ASTINTER.FOR  ast2body.for  ast2body.pyf  astiod.for
poliastro/tests/: __init__.py  test_angles.py  test_bodies.py  test_ephem.py  test_ephem.py.old  test_iod.py  test_jit.py  test_maneuver.py  test_math.py  test_plotting.py  test_rv_ephem.py  test_stumpff.py  test_twobody.py  test_util.py
poliastro/twobody/: __init__.py  angles.py  classical.py  conversion.py  core.py  equinoctial.py  propagation.py  rv.py  state.py
prototypes/: brownian_01.ipynb  brownian_01.py
src/: CZMLTutorial.ipynb  test.py
src/poliastro/: __init__.py  bodies.py  bodies_data.txt  cli.py  constants.py  coordinates.py  ephem.py  examples.py  extract_czml.py  frames.py  ground_station.py  hyper.py  integrator_params.py  integrators.py  io.py  izzo.py  jit.py  maneuver.py  mean_elements.py  neos.py  neos_dastcom5.py  patched_conics.py  plotting.py  sensors.py  spheroid_location.py  stumpff.py  testing.py  util.py  warnings.py
src/poliastro/_math/: ivp.py  (+6 more)
tests/: almost_equal.m  benchmarks.py  conftest.py  test_benchmark.py  test_bodies.py  test_czml.py  test_ephem.py  test_examples.py  test_frames.py  test_hyper.py  test_iod.py  test_kepler.for  test_lambert.for  test_lambert.py  test_lambert2.for  test_lambert_long.py  test_maneuver.py  test_newtonm.m  test_rv2coe.m  test_sensors.py  test_spheroid_location.py  test_stumpff.py  test_twobody.py  test_util.py
tests/tests_animation/: test_anim.py
tests/tests_atmosphere/: test_coesa62.py  test_coesa76.py  test_jacchia77.py
tests/tests_core/: test_core_propagation.py  test_core_util.py  test_propagation.py
tests/tests_earth/: test_earth_util.py  test_earthsatellite.py  test_sensors.py
tests/tests_neos/: none.html  table.html  test_dastcom5.py
tests/tests_plotting/: test_core.py  test_gabbard.py  test_groundtrack.py  test_misc.py  test_orbit_plotter.py  test_porkchop.py  test_static.py  test_tisserand.py
tests/tests_spacecraft/: test_spacecraft.py
tests/tests_threebody/: test_cr3bp_char_quant.py  test_cr3bp_lib_calc.py  test_flybys.py  test_restricted.py  test_soi.py
(+480 files in other folders)
