[build-system]
requires = [
    "flit_core >=3.3,<4",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "flit_core.buildapi"

[project]
name = "poliastro"
readme = "README.md"
requires-python = ">=3.7,<3.10"
license = {file = "COPYING"}
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"}
]
keywords = [
    "aero",
    "aerospace",
    "engineering",
    "astrodynamics",
    "orbits",
    "kepler",
    "orbital mechanics"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy >=3.2,<5",
    "astroquery >=0.3.9",
    "cached_property ; python_version<'3.8'",
    "jplephem",
    "matplotlib >=2.0,!=3.0.1",
    "numba >=0.46 ; python_version<'3.9'",
    "numba >=0.53.0 ; python_version>='3.9'",
    "numpy",
    "pandas",
    "plotly >=4.0,<6",
    "pyerfa",
    "scipy >=1.4.0",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://www.poliastro.space"
Documentation = "https://docs.poliastro.space"
Source = "https://github.com/poliastro/poliastro"
Tracker = "https://github.com/poliastro/poliastro/issues"
Funding = "https://opencollective.com/poliastro"

[project.optional-dependencies]
jupyter = ["notebook", "ipywidgets>=7.6"]
cesium = ["czml3 ~=0.5.3"]
dev = [
    "black==21.5b0",
    "coverage",
    "hypothesis",
    "ipython>=5.0",
    "ipywidgets>=7.6",
    "isort",
    "jupyter-client",
    "jupytext",
    "mypy>=0.740",
    "myst-parser>=0.13.1",
    "nbsphinx>=0.8.6",
    "nbconvert>=5.5",
    "pycodestyle",
    "pytest>=3.2",
    "pytest-cov<2.6.0",  # https://github.com/pytest-dev/pytest-cov/issues/222
    "pytest-doctestplus>=0.8",  # https://github.com/astropy/pytest-doctestplus/issues/118
    "pytest-mpl",
    "pytest-mypy",
    "pytest-remotedata",
    "sphinx!=3.5,!=4.0",  # https://github.com/readthedocs/sphinx-hoverxref/issues/119
    "sphinx-autoapi",
    "sphinx-gallery",
    "sphinx_rtd_theme~=1.0.0rc1",
    "sphinx-hoverxref==0.7b1",
    "sphinx-notfound-page",
    "sphinx-copybutton>0.2.9",
]

[tool.flit.sdist]
include = [
    "src/poliastro/atmosphere/data/coesa62.dat",
    "src/poliastro/atmosphere/data/coesa76.dat",
    "src/poliastro/atmosphere/data/coesa76_p.dat",
    "src/poliastro/atmosphere/data/coesa76_rho.dat",
    "setup.cfg"
]
exclude = [
    "docs/"
]
