[metadata]
name = poliastro
version = 0.13.dev0
author = Juan Luis Cano
author_email = hello@juanlu.space
license = MIT
description = Python package for Orbital Mechanics
keywords =
    aero
    aerospace
    engineering
    astrodynamics
    orbits
    kepler
    orbital mechanics
url = https://blog.poliastro.space/
download_url = https://github.com/poliastro/poliastro
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir=
	=src
packages = find:
zip_safe = False
install_requires =
    astropy>=3.1,<4.*
    astroquery>=0.3.9
    beautifulsoup4>=4.5.3
    jplephem
    matplotlib>=2.0,!=3.0.1
    numba>=0.39 ; implementation_name=='cpython'
    numpy
    pandas
    plotly>=3.6,<4.*
    requests
    scipy>=1.0
include_package_data = True
python_requires = >=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts = poliastro = poliastro.cli:main

[options.extras_require]
jupyter = notebook; ipywidgets>=7.0
dev =
    black ; python_version>='3.6'
    coverage
    ipykernel
    ipython>=5.0
    ipywidgets>=7.0
    isort
    jupyter-client
    nbsphinx
    pycodestyle
    pytest-cov<2.6.0
    pytest>=3.2
    sphinx
    sphinx_rtd_theme>=0.4.3
    pytest-mpl

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tool:tox]
envlist =
    check

[testenv:check]
deps =
    black
    docutils
    isort
    flake8
    mypy
    pygments
skip_install = true
usedevelop = false
commands =
    python setup.py check --strict --metadata --restructuredtext
    flake8 src setup.py
    isort --check-only --diff --recursive --project poliastro --section-default THIRDPARTY src setup.py
    black --check src setup.py
    mypy --ignore-missing-imports --check-untyped-defs --no-strict-optional src
