[metadata]
name = poliastro
description = Python package for Orbital Mechanics
long_description = file: README.rst
version = attr: poliastro.__version__
license = MIT
author = Juan Luis Cano
author_email = hello@juanlu.space
keywords =
    aero
    aerospace
    engineering
    astrodynamics
    orbits
    kepler
    orbital mechanics
url = https://blog.poliastro.space/
download_url = https://github.com/poliastro/poliastro
project_urls =
    Source=https://github.com/poliastro/poliastro
    Tracker=https://github.com/poliastro/poliastro/issues
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir=
	=src
packages = find:
zip_safe = False
python_requires = >=3.6,<3.8
install_requires =
    astropy~=3.2
    astroquery>=0.3.9
    jplephem
    matplotlib>=2.0,!=3.0.1
    numba>=0.39 ; implementation_name=='cpython'
    numpy
    pandas
    plotly~=4.0
    scipy>=1.0
include_package_data = True

[options.packages.find]
where = src

[options.data_files]
data =
    src/poliastro/atmosphere/data/coesa62.dat
    src/poliastro/atmosphere/data/coesa76.dat
    src/poliastro/atmosphere/data/coesa76_p.dat
    src/poliastro/atmosphere/data/coesa76_rho.dat


[options.entry_points]
console_scripts = poliastro = poliastro.cli:main

[options.extras_require]
jupyter = notebook
cesium = czml3~=0.1.2
dev =
    black
    coverage
    ipykernel
    ipython>=5.0
    isort
    jupyter-client
    nbsphinx
    pycodestyle
    pytest>=3.2
    pytest-cov<2.6.0
    pytest-mpl
    pytest-mypy
    pytest-remotedata
    sphinx
    sphinx_rtd_theme @ https://github.com/Juanlu001/sphinx_rtd_theme/archive/avoid-require-redefinition.zip
    sphinx-notfound-page
    tox

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
